<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GadirTV</string>
    <string name="login_title">Conectar a Xtream</string>
    <string name="hint_host">Servidor (http://host:puerto)</string>
    <string name="hint_user">Usuario</string>
    <string name="hint_pass">Contraseña</string>
    <string name="hint_name">Nombre del perfil</string>
    <string name="connect">CONECTAR</string>
    <string name="loading">Cargando contenido…</string>
    <string name="category_all">Todos</string>
    <string name="select_channel">Selecciona un canal</string>
    <string name="version_label">v3.0.0 nativo</string>
</resources>
